--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="fuel_in_tank_l">Fuel in tank (l)</string>
     <string name="destination">Destination</string>
     <string name="calculate">Calculate</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="wynik">wynik</string>
+    <string name="go_back">Go back</string>
 </resources>
