--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,10 @@
     <string name="calculate">Calculate</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="wynik">wynik</string>
+    <string name="result">result</string>
     <string name="go_back">Go back</string>
     <string name="gasoline">Gasoline</string>
     <string name="diesel">Diesel</string>
     <string name="lpg">LPG</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
